--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -64,9 +64,9 @@
 					Полиграфия (офсет)
 				</a>
 				<ul class="dropdown-menu dropdown-menu-dark">
-					<li><a class="dropdown-item" href="/poly/card">Визитки</a></li>
-					<li><a class="dropdown-item" href="/poly/leaflet">Листовки</a></li>
-					<li><a class="dropdown-item" href="/poly/booklet">Буклеты</a></li>
+					<li><a class="dropdown-item" href="/poly/card/#calc">Визитки</a></li>
+					<li><a class="dropdown-item" href="/poly/leaflet/#calc">Листовки</a></li>
+					<li><a class="dropdown-item" href="/poly/booklet/#calc">Буклеты</a></li>
 				</ul>
 			</div>
 
@@ -76,9 +76,9 @@
 					Широкоформатная печать
 				</a>
 				<ul class="dropdown-menu dropdown-menu-dark">
-					<li><a class="dropdown-item" href="/wide/banner">Баннеры</a></li>
-					<li><a class="dropdown-item" href="/wide/sticker">Наклейки</a></li>
-					<li><a class="dropdown-item" href="/wide/table">Таблички</a></li>
+					<li><a class="dropdown-item" href="/wide/banner/#calc">Баннеры</a></li>
+					<li><a class="dropdown-item" href="/wide/sticker/#calc">Наклейки</a></li>
+					<li><a class="dropdown-item" href="/wide/table/#calc">Таблички</a></li>
 				</ul>
 			</div>
 
@@ -88,8 +88,8 @@
 					Печати и штампы
 				</a>
 				<ul class="dropdown-menu dropdown-menu-dark">
-					<li><a class="dropdown-item" href="/stamp/c_stamp">Печати</a></li>
-					<li><a class="dropdown-item" href="/stamp/r_stamp">Штампы</a></li>
+					<li><a class="dropdown-item" href="/stamp/c_stamp/#calc">Печати</a></li>
+					<li><a class="dropdown-item" href="/stamp/r_stamp/#calc">Штампы</a></li>
 				</ul>
 			</div>
 		</div>
