--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -35,7 +35,7 @@
                         Мелованный картон 300г/м.
                     </p>
                     <!-- <h5>Цена: 50 руб.</h5> -->
-                    <a role="button" href="/poly/card" class="btn btn-primary px-5">Заказать визитки</a>
+                    <a role="button" href="/poly/card/#calc" class="btn btn-primary px-5">Заказать визитки</a>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
                         Бумага на выбор 130г/м, 170г/м, 300г/м.
                     </p>
                     <!-- <h5>Цена: 50 руб.</h5> -->
-                    <a role="button" href="/poly/leaflet" class="btn btn-primary px-5">Заказать листовки</a>
+                    <a role="button" href="/poly/leaflet/#calc" class="btn btn-primary px-5">Заказать листовки</a>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
                         Бумага на выбор.
                     </p>
                     <!-- <h5>Цена: 50 руб.</h5> -->
-                    <a role="button" href="/poly/booklet" class="btn btn-primary px-5">Заказать буклеты</a>
+                    <a role="button" href="/poly/booklet/#calc" class="btn btn-primary px-5">Заказать буклеты</a>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                     <p class="card-text">Изотовление баннеров. Установка люверсов. Интерьерная печать.
                     </p>
                     <!-- <h5>Цена: 50 руб.</h5> -->
-                    <a role="button" href="/wide/banner" class="btn btn-primary px-5">Заказать баннер</a>
+                    <a role="button" href="/wide/banner/#calc" class="btn btn-primary px-5">Заказать баннер</a>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
                     <p class="card-text">Печать широкоформатных наклеек. Интерьерая печать.
                     </p>
                     <!-- <h5>Цена: 50 руб.</h5> -->
-                    <a role="button" href="/wide/sticker" class="btn btn-primary px-5">Заказать наклейки</a>
+                    <a role="button" href="/wide/sticker/#calc" class="btn btn-primary px-5">Заказать наклейки</a>
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@
                     <p class="card-text">Изготовление табличек. Маленьких и больших размеров. ПВХ 5мм с накаткой.
                     </p>
                     <!-- <h5>Цена: 50 руб.</h5> -->
-                    <a role="button" href="/wide/table" class="btn btn-primary px-5">Заказать таблички</a>
+                    <a role="button" href="/wide/table/#calc" class="btn btn-primary px-5">Заказать таблички</a>
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     <p class="card-text">Изготовление печатей. Новых и по оттиску. 3 вида оснасток. Срочное изготовление.
                     </p>
                     <!-- <h5>Цена: 50 руб.</h5> -->
-                    <a role="button" href="/stamp/c_stamp" class="btn btn-primary px-5">Заказать печать</a>
+                    <a role="button" href="/stamp/c_stamp/#calc" class="btn btn-primary px-5">Заказать печать</a>
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
                     <p class="card-text">Печать широкоформатных наклеек. Интерьерая печать.
                     </p>
                     <!-- <h5>Цена: 50 руб.</h5> -->
-                    <a role="button" href="/stamp/r_stamp" class="btn btn-primary px-5">Заказать штамп</a>
+                    <a role="button" href="/stamp/r_stamp/#calc" class="btn btn-primary px-5">Заказать штамп</a>
                 </div>
             </div>
         </div>
@@ -167,7 +167,7 @@
                     </div>
                     </p>
                     <!-- <h5>Цена: 50 руб.</h5> -->
-                    <a role="button" href="/stamp/r_stamp" class="btn btn-primary px-5">Отправить запрос</a>
+                    <a role="button" href="#" class="btn btn-primary px-5">Отправить запрос</a>
                 </div>
             </div>
         </div>
