--- a/tipkor/wide/templates/wide/sticker.html
+++ b/tipkor/wide/templates/wide/sticker.html
@@ -38,7 +38,7 @@
 <!-- Форма -->
 <div class="container bg-light shadow border rounded my-3 pb-2">
     <!-- <hr width="100%" size="8" color="#0d6efd" /> -->
-    <h1 id="after_calc" class="title_text pt-3">Печать широкоформатных наклеек</h1>
+    <h1 id="calc" class="title_text pt-3">Печать широкоформатных наклеек</h1>
 
     <div class="calc_form border shadow rounded p-3 mt-4">
 
@@ -76,7 +76,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div id="after_calc" class="row">
                         <div class="col">
                             <div hidden class="col">{{ calc_form.post_obr }}<p>Обработка и люверсы (убрать обработку)
                                 </p>
