--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -40,7 +40,7 @@
 <!-- Форма -->
 <div class="container bg-light shadow border rounded my-3 pb-2">
     <!-- <hr width="100%" size="8" color="#0d6efd" /> -->
-    <h1 id="after_calc" class="title_text pt-3">Печать визиток</h1>
+    <h1 id="calc" class="title_text pt-3">Печать визиток</h1>
 
     <div class="calc_form border shadow rounded p-3 mt-4">
         <div class="row">
@@ -54,7 +54,7 @@
                         </div>
                     </div>
 
-                    <div class="row pt-4">
+                    <div id="after_calc" class="row pt-4">
                         <div class="col">{{ calc_form.duplex }}<p>4+4/4+0:</p>
                         </div>
                         <div class="col">{{ calc_form.pressrun }}<p>тираж</p>
