--- a/tipkor/stamp/templates/stamp/r_stamp.html
+++ b/tipkor/stamp/templates/stamp/r_stamp.html
@@ -50,7 +50,7 @@
     <div class="container bg-light shadow border rounded my-3 pb-2">
         <!-- <hr width="100%" size="8" color="#0d6efd" /> -->
 
-        <h1 id="after_calc" class="title_text pt-3">Изготовление штампов</h1>
+        <h1 id="calc" class="title_text pt-3">Изготовление штампов</h1>
 
         <div class="calc_form border shadow rounded p-3 mt-4 ">
             <div class="row">
@@ -67,7 +67,7 @@
                             <div class="col">{{ form.snap }}<p>Оснастка</p>
                             </div>
                         </div>
-                        <div class="row">
+                        <div id="after_calc" class="row">
                             <div class="col">
                                 <div class="col">{{ form.count }}<p>Количество</p>
                                 </div>
