--- a/tipkor/stamp/templates/stamp/r_stamp.html
+++ b/tipkor/stamp/templates/stamp/r_stamp.html
@@ -14,9 +14,9 @@
 <div class="container">
     <div class="snap_block">
         <div class="container py-3 container shadow border rounded">
-            <a class="" data-bs-toggle="collapse" href="#snap_items_collapse" aria-expanded="true"
+            <a class="link-light" data-bs-toggle="collapse" href="#snap_items_collapse" aria-expanded="true"
                 aria-controls="snap_items_collapse">
-                <h4 class="how_snap">Какую оснастку выбрать?</h4>
+                <h4 class="how_snap link-light">Какую оснастку выбрать?</h4>
             </a>
             <!-- Блок пояснений, коллапс -->
             <div class="collapse" id="snap_items_collapse">
