--- a/tipkor/poly/templates/poly/booklet.html
+++ b/tipkor/poly/templates/poly/booklet.html
@@ -12,17 +12,17 @@
 
 
 <!-- Заголовок коллапс блока -->
-<div class="container shadow border rounded">
+<!-- <div class="container shadow border rounded">
     <div class="card_collapse_block">
         <div class="container py-3">
             <a class="" data-bs-toggle="collapse" href="#snap_items_collapse" aria-expanded="true"
                 aria-controls="snap_items_collapse">
                 <h4 class="how_snap">Виды буклетов и что такое биговка?</h4>
             </a>
-            <!-- Блок пояснений, коллапс -->
+            Блок пояснений, коллапс
             <div class="collapse" id="snap_items_collapse">
                 <div class="row d-flex justify-content-start my-2">
-                    <!-- карточка -->
+                    карточка
                     <div class="card text-center mx-3 mb-2" style="width: 30rem;">
                         <h5 class="card-header">Обычная</h5>
                         <img src="{% static '/stamp/img/c_norm_snap.jpg' %}" class="card-img-top" alt="...">
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- Форма -->
 <div class="container bg-light shadow border rounded my-3 pb-2">
