--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -26,7 +26,8 @@
 			<!-- телефон -->
 			<div class="col hi_telefon">
 				<div>
-					<p class="fs-3 mb-0"><strong>8 (964) 571-65-51</strong></p>
+					<a class="fs-3 mb-0 link-dark" href="tel:+79645716551"><strong>+7 (964) 571-65-51</strong></a>
+					<!-- <p class="fs-3 mb-0"><strong>8 (964) 571-65-51</strong></p> -->
 				</div>
 			</div>
 			<!-- график работы -->
