--- a/tipkor/wide/templates/wide/banner.html
+++ b/tipkor/wide/templates/wide/banner.html
@@ -138,12 +138,12 @@
     <div class="row px-3">
         <div class="col">
             <h5>Баннер</h5>
-            <p>
+            <!-- <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem commodi dicta, fuga repellat
                 minus
                 mollitia eveniet perferendis, incidunt alias quod a tempore quis magni numquam laboriosam, illo
                 provident
-                tempora!</p>
+                tempora!</p> -->
         </div>
     </div>
 </div>
