--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -113,14 +113,14 @@
     <div class="row px-3">
         <div class="col">
             <h5>Визитки</h5>
-            <p>
+            <!-- <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem commodi dicta, fuga
                 repellat
                 minus
                 mollitia eveniet perferendis, incidunt alias quod a tempore quis magni numquam laboriosam, illo
                 provident
                 tempora!</p>
-        </div>
+        </div> -->
     </div>
 </div>
 
