--- a/tipkor/wide/templates/wide/success.html
+++ b/tipkor/wide/templates/wide/success.html
@@ -13,7 +13,7 @@
 
 
 <div class="container">
-    <div class="confirm_order border shadow rounded p-3">
+    <div class="confirm_order border shadow rounded p-3 bg-light">
         <div class="row">
 
             <h2 id="a_success">Заказ №{{ order.id }} размещен от {{ order.create_date }}</h2>
@@ -21,7 +21,7 @@
             <div>
                 <div class="col">
                     <h4>Стоимость: {{ order.product.cost }} руб.</h4>
-                    <h5>Продукция: { order.product.type_production }}</h5>
+                    <h5>Продукция: {{ order.product.type_production }}</h5>
                     <h5>Размер: {{ order.product.x }}х{{ order.product.y }}</h5>
                     <h5>Материал: {{ order.product.material }}</h5>
 
@@ -37,8 +37,8 @@
         <a href="/" type="button">На главную</a>
     </div>
 </div>
-    <br><br>
+<br><br>
 
 
 
-    {% endblock %}
+{% endblock %}
