--- a/tipkor/stamp/templates/stamp/c_stamp.html
+++ b/tipkor/stamp/templates/stamp/c_stamp.html
@@ -125,7 +125,9 @@
                     {{ confirm_form.id_stamp_obj }}
 
                     <div class="pb-4">
-                        <p>Прикрепите файл: </p>{{ confirm_form.file }}
+                        <p>Прикрепите файл: </p>
+                        <h4>До 10Мб, если больше пришлите на почту/мессенджеры или ссылкой в комментарии</h4>
+                        {{ confirm_form.file }}
                     </div>
 
                     <div>
