--- a/tipkor/wide/templates/wide/confirm.html
+++ b/tipkor/wide/templates/wide/confirm.html
@@ -40,7 +40,8 @@
                 {{ form.type_production }}
 
                 <div class="pb-4">
-                    <p>Прикрепите файл: </p>{{ form.file }}
+                    <p>Прикрепите файл: </p><h4>До 10Мб, если больше пришлите на почту/мессенджеры или ссылкой в комментарии</h4>
+                    {{ form.file }}
                 </div>
 
                 <div>
