--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -3,6 +3,29 @@
 {% load static %}
 
 <head>
+
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript">
+		(function (m, e, t, r, i, k, a) {
+			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+			m[i].l = 1 * new Date();
+			for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+			k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+		})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+		ym(94658024, "init", {
+			clickmap: true,
+			trackLinks: true,
+			accurateTrackBounce: true,
+			webvisor: true
+		});
+	</script>
+	<noscript>
+		<div><img src="https://mc.yandex.ru/watch/94658024" style="position:absolute; left:-9999px;" alt="" /></div>
+	</noscript>
+	<!-- /Yandex.Metrika counter -->
+
 	<title>tipkor.ru</title>
 	<meta charset="UTF-8">
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
@@ -40,7 +63,8 @@
 				<div class="img_mess">
 					<a href="/#map">
 						<img id="hi_map" src="{% static '/tipkor/img/map.svg' %}" alt="" style="padding-left: 5px">
-						<a href="/#map" style="font-weight: 800; font-size: large; padding-left: 2px; padding-right: 15px">Карта</a>
+						<a href="/#map"
+							style="font-weight: 800; font-size: large; padding-left: 2px; padding-right: 15px">Карта</a>
 					</a>
 
 					<a href="https://wa.me/79645716551?text=" target="_blank">
