--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Визитки</title>
+<meta name="description" content="Недорогая печать визиток. От 1го дня. Высокое качество, мелованный картон 300г/м."/>
+{% endblock %}
 
 {% block content %}
 
