--- a/tipkor/poly/templates/poly/leaflet.html
+++ b/tipkor/poly/templates/poly/leaflet.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Буклеты</title>
+<meta name="description" content="Печать листовок - недорого. Печать от 1го дня, любые форматы. Мелованная бумага, офсетная печать."/>
+{% endblock %}
 
 {% block content %}
 
