--- a/tipkor/stamp/templates/stamp/r_stamp.html
+++ b/tipkor/stamp/templates/stamp/r_stamp.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Штампы</title>
+<meta name="description" content="Заказ штампа. Оснастки на выбор. Срочное изготовление."/>
+{% endblock %}
 
 {% block content %}
 
