--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -26,11 +26,12 @@
 	</noscript>
 	<!-- /Yandex.Metrika counter -->
 
-	<title>tipkor.ru</title>
+	{% block title_meta %}{% endblock %}
+	
 	<meta charset="UTF-8">
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Шрифты установить -->
 	<link rel="icon" href="{% static 'tipkor/img/favicon.ico' %}" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="{% static 'tipkor/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'tipkor/css/tipkor.css' %}">
