--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Tipkor.ru</title>
+<meta name="description" content="Tipkor.ru - Печать визиток, листовок, буклетов, баннеров, наклеек. Изготовление печатей, штампов и табличек."/>
+{% endblock %}
+
 <!-- Блок главной страницы -->
 {% block content %}
 <!-- Картинка -->
-
 <!-- Описание главная -->
 <!-- <div class="container py-3 bg-light shadow border rounded">
     <div class="row p-4 nopadding"> -->
