--- a/tipkor/wide/templates/wide/banner.html
+++ b/tipkor/wide/templates/wide/banner.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Баннеры</title>
+<meta name="description" content="Изготовление баннеров. Любой размер, с люверсами и проклейкой. Быстрая печать."/>
+{% endblock %}
 
 {% block content %}
 
