--- a/tipkor/wide/templates/wide/confirm.html
+++ b/tipkor/wide/templates/wide/confirm.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Подтверждение заказа</title>
+<meta name="description" content="Подтверждение заказа широкоформатной продукции."/>
+{% endblock %}
 
 {% block content %}
 
