--- a/tipkor/wide/templates/wide/sticker.html
+++ b/tipkor/wide/templates/wide/sticker.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Наклейки</title>
+<meta name="description" content="Изготовление наклеек. Любой размер, быстрая печать. Плоттерная резка."/>
+{% endblock %}
 
 {% block content %}
 
