--- a/tipkor/wide/templates/wide/table.html
+++ b/tipkor/wide/templates/wide/table.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Таблички</title>
+<meta name="description" content="Изготовление табличек ПВХ и композит. Любой размер и количество. Возможна ламинация."/>
+{% endblock %}
 
 {% block content %}
 
