--- a/tipkor/stamp/templates/stamp/success.html
+++ b/tipkor/stamp/templates/stamp/success.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Спасибо за заказ</title>
+<meta name="description" content="Успешно оформлен заказ штемпельной продукции."/>
+{% endblock %}
 
 {% block content %}
 
