--- a/tipkor/poly/templates/poly/leaflet.html
+++ b/tipkor/poly/templates/poly/leaflet.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Буклеты</title>
+<title>Листовки</title>
 <meta name="description" content="Печать листовок - недорого. Печать от 1го дня, любые форматы. Мелованная бумага, офсетная печать."/>
 {% endblock %}
 
