--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -32,7 +32,7 @@
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="{% static 'tipkor/img/favicon.ico' %}" type="image/x-icon">
+	<link rel="icon" href="{% static 'tipkor/img/favicon.svg' %}" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="{% static 'tipkor/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'tipkor/css/tipkor.css' %}">
 
