--- a/tipkor/poly/templates/poly/booklet.html
+++ b/tipkor/poly/templates/poly/booklet.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Буклеты</title>
-<meta name="description" content="Изготовление буклетов. Евробуклет, гармошка, книжка. Мелованная бумага, офсетная печать. "/>
+<title>Заказ буклетов. Быстрая недорогая печать.</title>
+<meta name="description" content="Заказать изготовление буклетов. Евробуклет, гармошка, книжка. Мелованная бумага, офсетная печать. "/>
+<meta name="keywords" content="заказ буклетов онлайн заказ офсетная печать">
 {% endblock %}
 
 {% block content %}
