--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Визитки</title>
-<meta name="description" content="Недорогая печать визиток. От 1го дня. Высокое качество, мелованный картон 300г/м."/>
+<title>Заказать визиток. Быстрая, недорогая печать от 1 дня.</title>
+<meta name="description" content="Заказать визитки онлайн. От 1го дня. Высокое качество, мелованный картон 300г/м."/>
+<meta name="keywords" content="заказ визиток онлайн заказ офсетная печать">
 {% endblock %}
 
 {% block content %}
