--- a/tipkor/stamp/templates/stamp/c_stamp.html
+++ b/tipkor/stamp/templates/stamp/c_stamp.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Печати</title>
+<title>Заказ печати для ООО и ИП. Оснастки на выбор. Срочное изготовление.</title>
 <meta name="description" content="Заказ печатей. Оснастки на выбор. Срочное изготовление."/>
+<meta name="keywords" content="заказ печать штамп для ИП ООО по оттиску новая срочно срочное изготовление онлайн заказ клише">
 {% endblock %}
 
 {% block content %}
