--- a/tipkor/stamp/templates/stamp/r_stamp.html
+++ b/tipkor/stamp/templates/stamp/r_stamp.html
@@ -2,8 +2,10 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Штампы</title>
+<title>Заказ штампов. Оснастки на выбор. Срочное изготовление.</title>
 <meta name="description" content="Заказ штампа. Оснастки на выбор. Срочное изготовление."/>
+<meta name="keywords" content="заказ штамп штампов путевых угловой по оттиску новая срочно срочное изготовление онлайн заказ клише">
+
 {% endblock %}
 
 {% block content %}
