--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Tipkor.ru</title>
-<meta name="description" content="Tipkor.ru - Печать визиток, листовок, буклетов, баннеров, наклеек. Изготовление печатей, штампов и табличек."/>
+<title>Tipkor.ru - Полиграфия, широкоформатная печать, печати и штампы. Online заказ рекламы.</title>
+<meta name="description" content="Tipkor.ru - Печать визиток, листовок, буклетов, баннеров, наклеек. Изготовление печатей, штампов и табличек. Online заказ. Изготовление заказов от 1 часа"/>
+<meta name="keywords" content="типография баннеры печати штампы ижорский проезд наклейки визитки буклеты листовки печать оснастка">
 {% endblock %}
 
 <!-- Блок главной страницы -->
