--- a/tipkor/wide/templates/wide/banner.html
+++ b/tipkor/wide/templates/wide/banner.html
@@ -2,8 +2,10 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Баннеры</title>
-<meta name="description" content="Изготовление баннеров. Любой размер, с люверсами и проклейкой. Быстрая печать."/>
+<title>Заказ баннеров с люверсами и без. Широкоформатная печать.</title>
+<meta name="description" content="Заказ изготовления баннера. Любой размер, с люверсами и проклейкой. Быстрая печать."/>
+<meta name="keywords" content="заказ баннер баннеры онлайн заказ широкоформатная сольветная печать">
+
 {% endblock %}
 
 {% block content %}
