--- a/tipkor/wide/templates/wide/sticker.html
+++ b/tipkor/wide/templates/wide/sticker.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Наклейки</title>
-<meta name="description" content="Изготовление наклеек. Любой размер, быстрая печать. Плоттерная резка."/>
+<title>Заказ наклеек. Большие и маленькие. Широкоформатная печать.</title>
+<meta name="description" content="Заказать изготовление наклеек, этикеток. Любой размер, быстрая печать. Плоттерная резка."/>
+<meta name="keywords" content="заказ наклейки стикеры этикетки онлайн заказ широкоформатная сольветная печать">
 {% endblock %}
 
 {% block content %}
