--- a/tipkor/wide/templates/wide/table.html
+++ b/tipkor/wide/templates/wide/table.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Таблички</title>
-<meta name="description" content="Изготовление табличек ПВХ и композит. Любой размер и количество. Возможна ламинация."/>
+<title>Заказ табличек. ПВХ основа и накатка полноцветной пленки. Для помещений и улицы.</title>
+<meta name="description" content="Заказ изготовления табличек ПВХ и композит. Любой размер и количество. Возможна ламинация."/>
+<meta name="keywords" content="заказ таблички панели пленка  онлайн заказ широкоформатная сольветная печать">
 {% endblock %}
 
 {% block content %}
