--- a/tipkor/poly/templates/poly/leaflet.html
+++ b/tipkor/poly/templates/poly/leaflet.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block title_meta %}
-<title>Листовки</title>
-<meta name="description" content="Печать листовок - недорого. Печать от 1го дня, любые форматы. Мелованная бумага, офсетная печать."/>
+<title>Заказать листовки. Быстрая недорогая печать.</title>
+<meta name="description" content="Заказать листовки онлайн. Печать от 1го дня, любые форматы. Мелованная бумага, офсетная печать."/>
+<meta name="keywords" content="заказ листовок онлайн заказ офсетная печать">
 {% endblock %}
 
 {% block content %}
