--- a/tipkor/tipkor/templates/tipkor/404.html
+++ b/tipkor/tipkor/templates/tipkor/404.html
@@ -4,12 +4,16 @@
 
 {% block content %}
 
-<div class="container">
-    <h1 style="font-weight: 900;">404</h1>
-</div>
 
-<br><br>
+<div class="container rounded bg-light shadow p-3">
+    <div class="confirm_order">
+        <div class="row">
+
+            <h3>К сожалению, такой страницы не существует или была удалена</h3>
+            <a href="/" type="button"><h4>На главную</h4></a>
+        </div>
+    </div>
 
 
 
-{% endblock %}
+    {% endblock %}
