rules politica add page

--- a/tipkor/poly/templates/poly/confirm.html
+++ b/tipkor/poly/templates/poly/confirm.html
@@ -79,6 +79,7 @@
                         class="yes_button btn btn-success  mx-1">Заказать</button>
                     <div>
                         <h6 style="padding-left: 5px;">Нажмите "заказать", что бы отправить нам заказ.</h6>
+                        <p style="padding-left: 5px; font-size: 12px;">Нажав "Заказать" Вы автоматически соглашаетесь с <a target="_blank" style="color: rgb(0, 56, 121);" href="/politica/">политикой о конфиденциальности данных.</a></p>
                     </div>
                 </div>
             </div>
