--- a/tipkor/stamp/templates/stamp/c_stamp.html
+++ b/tipkor/stamp/templates/stamp/c_stamp.html
@@ -3,8 +3,9 @@
 
 {% block title_meta %}
 <title>Заказ печати для ООО и ИП. Оснастки на выбор. Срочное изготовление.</title>
-<meta name="description" content="Заказ печатей. Оснастки на выбор. Срочное изготовление."/>
-<meta name="keywords" content="заказ печать штамп для ИП ООО по оттиску новая срочно срочное изготовление онлайн заказ клише">
+<meta name="description" content="Заказ печатей. Оснастки на выбор. Срочное изготовление." />
+<meta name="keywords"
+    content="заказ печать штамп для ИП ООО по оттиску новая срочно срочное изготовление онлайн заказ клише">
 {% endblock %}
 
 {% block content %}
@@ -163,6 +164,10 @@
                             name="{{ confirm_form.prefix }}">Заказать</button>
                         <div>
                             <h6 style="padding-left: 5px;">Нажмите "заказать", что бы отправить нам заказ.</h6>
+                            <p style="padding-left: 5px; font-size: 12px;">Нажав "Заказать" Вы автоматически
+                                соглашаетесь с <a target="_blank" style="color: rgb(0, 56, 121);"
+                                    href="/politica/">политикой о конфиденциальности данных.</a></p>
+
                         </div>
                     </div>
                 </div>
