--- a/tipkor/stamp/templates/stamp/r_stamp.html
+++ b/tipkor/stamp/templates/stamp/r_stamp.html
@@ -3,8 +3,9 @@
 
 {% block title_meta %}
 <title>Заказ штампов. Оснастки на выбор. Срочное изготовление.</title>
-<meta name="description" content="Заказ штампа. Оснастки на выбор. Срочное изготовление."/>
-<meta name="keywords" content="заказ штамп штампов путевых угловой по оттиску новая срочно срочное изготовление онлайн заказ клише">
+<meta name="description" content="Заказ штампа. Оснастки на выбор. Срочное изготовление." />
+<meta name="keywords"
+    content="заказ штамп штампов путевых угловой по оттиску новая срочно срочное изготовление онлайн заказ клише">
 
 {% endblock %}
 
@@ -158,6 +159,10 @@
                             name="{{ confirm_form.prefix }}">Заказать</button>
                         <div>
                             <h6 style="padding-left: 5px;">Нажмите "заказать", что бы отправить нам заказ.</h6>
+                            <p style="padding-left: 5px; font-size: 12px;">Нажав "Заказать" Вы автоматически
+                                соглашаетесь с <a target="_blank" style="color: rgb(0, 56, 121);"
+                                    href="/politica/">политикой о конфиденциальности данных.</a></p>
+
                         </div>
                     </div>
                 </div>
