--- a/tipkor/tipkor/templates/tipkor/politica.html
+++ b/tipkor/tipkor/templates/tipkor/politica.html
@@ -8,9 +8,11 @@
 <div class="container rounded bg-light shadow p-3">
     <div class="confirm_order">
         <div class="row">
-
-            <p>Политика в отношении обработки персональных данных
-                <br>1. Общие положения<br>
+            <a href="/" type="button">
+                <h5>На главную</h5>
+            </a><br>
+            <h3>Политика в отношении обработки персональных данных</h3>
+            <p><br>1. Общие положения<br>
                 Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального
                 закона от 27.07.2006. №152-ФЗ «О персональных данных» (далее - Закон о персональных данных) и определяет
                 порядок обработки персональных данных и меры по обеспечению безопасности персональных данных,
@@ -21,7 +23,7 @@
                 неприкосновенность частной жизни, личную и семейную тайну.
                 <br>1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика)
                 применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта
-                https://tipkor.ru
+                https://tipkor.ru<br>
                 <br>2. Основные понятия, используемые в Политике
                 <br>2.1. Автоматизированная обработка персональных данных – обработка персональных данных с помощью
                 средств
@@ -100,7 +102,7 @@
                 <br>– прекратить передачу (распространение, предоставление, доступ) персональных данных, прекратить
                 обработку и уничтожить персональные данные в порядке и случаях, предусмотренных Законом о персональных
                 данных;
-                <br>– исполнять иные обязанности, предусмотренные Законом о персональных данных.
+                <br>– исполнять иные обязанности, предусмотренные Законом о персональных данных.<br>
                 <br>4. Основные права и обязанности субъектов персональных данных
                 <br> 4.1. Субъекты персональных данных имеют право:
                 <br>– получать информацию, касающуюся обработки его персональных данных, за исключением случаев,
@@ -127,7 +129,7 @@
                 <br>– сообщать Оператору об уточнении (обновлении, изменении) своих персональных данных.
                 <br> 4.3. Лица, передавшие Оператору недостоверные сведения о себе, либо сведения о другом субъекте
                 персональных данных без согласия последнего, несут ответственность в соответствии с законодательством
-                РФ.
+                РФ.<br>
                <br> 5. Оператор может обрабатывать следующие персональные данные Пользователя
                <br> 5.1. Фамилия, имя, отчество.
                <br> 5.2. Электронный адрес.
@@ -158,7 +160,7 @@
                 требовании персональные данные могут обрабатываться только Оператором, которому оно направлено.
                <br> 5.8.4 Согласие на обработку персональных данных, разрешенных для распространения, прекращает свое
                 действие с момента поступления Оператору требования, указанного в п. 5.8.3 настоящей Политики в
-                отношении обработки персональных данных.
+                отношении обработки персональных данных.<br>
                 <br>6. Принципы обработки персональных данных
                <br> 6.1. Обработка персональных данных осуществляется на законной и справедливой основе.
                <br> 6.2. Обработка персональных данных ограничивается достижением конкретных, заранее определенных и
@@ -179,7 +181,7 @@
                 данных не установлен федеральным законом, договором, стороной которого, выгодоприобретателем или
                 поручителем по которому является субъект персональных данных. Обрабатываемые персональные данные
                 уничтожаются либо обезличиваются по достижении целей обработки или в случае утраты необходимости в
-                достижении этих целей, если иное не предусмотрено федеральным законом.
+                достижении этих целей, если иное не предусмотрено федеральным законом.<br>
                 <br>7. Цели обработки персональных данных
                <br> 7.1. Цель обработки персональных данных Пользователя:
                 <br>– информирование Пользователя посредством отправки электронных писем;
@@ -191,7 +193,7 @@
                 информационных сообщений, направив Оператору письмо на адрес электронной почты tipkor@mail.ru с пометкой
                 «Отказ от уведомлений о новых продуктах и услугах и специальных предложениях».
                <br> 7.3. Обезличенные данные Пользователей, собираемые с помощью сервисов интернет-статистики, служат для
-                сбора информации о действиях Пользователей на сайте, улучшения качества сайта и его содержания.
+                сбора информации о действиях Пользователей на сайте, улучшения качества сайта и его содержания.<br>
                 <br>8. Правовые основания обработки персональных данных
                <br> 8.1. Правовыми основаниями обработки персональных данных Оператором являются:
                 <br>– перечислите нормативно-правовые акты, регулирующие отношения, связанные с вашей деятельностью,
@@ -210,7 +212,7 @@
                <br> 8.3. Оператор обрабатывает обезличенные данные о Пользователе в случае, если это разрешено в настройках
                 браузера Пользователя (включено сохранение файлов «cookie» и использование технологии JavaScript).
                <br> 8.4. Субъект персональных данных самостоятельно принимает решение о предоставлении его персональных
-                данных и дает согласие свободно, своей волей и в своем интересе.
+                данных и дает согласие свободно, своей волей и в своем интересе.<br>
                 <br>9. Условия обработки персональных данных
                <br> 9.1. Обработка персональных данных осуществляется с согласия субъекта персональных данных на обработку
                 его персональных данных.
@@ -231,7 +233,7 @@
                 предоставлен субъектом персональных данных либо по его просьбе (далее – общедоступные персональные
                 данные).
                <br> 9.7. Осуществляется обработка персональных данных, подлежащих опубликованию или обязательному раскрытию
-                в соответствии с федеральным законом.
+                в соответствии с федеральным законом.<br>
                 <br>10. Порядок сбора, хранения, передачи и других видов обработки персональных данных
                 Безопасность персональных данных, которые обрабатываются Оператором, обеспечивается путем реализации
                 правовых, организационных и технических мер, необходимых для выполнения в полном объеме требований
@@ -267,13 +269,13 @@
                 выгодоприобретателем или поручителем по которому является субъект персональных данных.
                <br> 10.9. Условием прекращения обработки персональных данных может являться достижение целей обработки
                 персональных данных, истечение срока действия согласия субъекта персональных данных или отзыв согласия
-                субъектом персональных данных, а также выявление неправомерной обработки персональных данных.
+                субъектом персональных данных, а также выявление неправомерной обработки персональных данных.<br>
                 <br>11. Перечень действий, производимых Оператором с полученными персональными данными
                <br> 11.1. Оператор осуществляет сбор, запись, систематизацию, накопление, хранение, уточнение (обновление,
                 изменение), извлечение, использование, передачу (распространение, предоставление, доступ),
                 обезличивание, блокирование, удаление и уничтожение персональных данных.
                <br> 11.2. Оператор осуществляет автоматизированную обработку персональных данных с получением и/или
-                передачей полученной информации по информационно-телекоммуникационным сетям или без таковой.
+                передачей полученной информации по информационно-телекоммуникационным сетям или без таковой.<br>
                 <br>12. Трансграничная передача персональных данных
                <br> 12.1. Оператор до начала осуществления трансграничной передачи персональных данных обязан убедиться в
                 том, что иностранным государством, на территорию которого предполагается осуществлять передачу
@@ -281,11 +283,11 @@
                <br> 12.2. Трансграничная передача персональных данных на территории иностранных государств, не отвечающих
                 вышеуказанным требованиям, может осуществляться только в случае наличия согласия в письменной форме
                 субъекта персональных данных на трансграничную передачу его персональных данных и/или исполнения
-                договора, стороной которого является субъект персональных данных.
+                договора, стороной которого является субъект персональных данных.<br>
                 <br>13. Конфиденциальность персональных данных
                 Оператор и иные лица, получившие доступ к персональным данным, обязаны не раскрывать третьим лицам и не
                 распространять персональные данные без согласия субъекта персональных данных, если иное не предусмотрено
-                федеральным законом.
+                федеральным законом.<br>
                 <br>14. Заключительные положения
                <br> 14.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его
                 персональных данных, обратившись к Оператору с помощью электронной почты tipkor@mail.ru.
