--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -27,10 +27,10 @@
 	<!-- /Yandex.Metrika counter -->
 
 	{% block title_meta %}{% endblock %}
-	
+
 	<meta charset="UTF-8">
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-
+	<meta name="yandex-verification" content="5fccdfbbfd32f5b2" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="{% static 'tipkor/img/favicon.svg' %}" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="{% static 'tipkor/css/bootstrap.min.css' %}">
