--- a/tipkor/stamp/templates/stamp/c_stamp.html
+++ b/tipkor/stamp/templates/stamp/c_stamp.html
@@ -87,7 +87,7 @@
                                 <button type="submit" class="calc_button btn btn-primary"
                                     name="{{ form.prefix }}">Расчет</button>
                                 <div>
-                                    <h6>Нажмите "Расчет", что бы сформировать заказ</h6>
+                                    <h6>Нажмите "Расчет", чтобы сформировать заказ</h6>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +176,8 @@
         </div>
         {% else %}
         <h4>{{ result.cost }}</h4>
-        <h2 style="color: rgb(145, 1, 30);">Выбирете параметры и нажмите "Расчет".</h2>
+        <h2 style="color: rgb(145, 1, 30);">Выбирайте параметры и нажимайте кнопку "Расчет".</h2>
+
         {% endif %}
     </div>
 </div>
