--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -71,7 +71,7 @@
 					<a href="https://wa.me/79645716551?text=" target="_blank">
 						<img id="hi_mess" src="{% static '/tipkor/img/whatsap.svg' %}" alt="" style="padding-left: 5px">
 						<a href="https://wa.me/79645716551?text=" target="_blank"
-							style="font-weight: 800; font-size: large; padding-left: 2px">Whatssap</a>
+							style="font-weight: 800; font-size: large; padding-left: 2px">WhatsApp</a>
 					</a>
 
 					<a href="https://t.me/+79645716551" target="_blank">
