--- a/tipkor/poly/templates/poly/booklet.html
+++ b/tipkor/poly/templates/poly/booklet.html
@@ -69,7 +69,7 @@
                             <div class="col">{{ calc_form.post_obr }}<p>Тип буклета</p>
                             </div>
                             <button type="submit" class="calc_button btn btn-primary" name="calc_form">Расчет</button>
-                            <h6>Нажмите "Расчет", что бы сформировать заказ</h6>
+                            <h6>Нажмите "Расчет", чтобы сформировать заказ</h6>
                         </div>
                     </div>
                 </form>
@@ -109,7 +109,8 @@
             </div>
             {% else %}
             <h4>{{ result.cost }}</h4>
-            <h2 style="color: rgb(145, 1, 30);">Выбирете параметры и нажмите "Расчет".</h2>
+            <h2 style="color: rgb(145, 1, 30);">Выбирайте параметры и нажимайте кнопку "Расчет".</h2>
+
 
             {% endif %}
         </div>
