--- a/tipkor/wide/templates/wide/banner.html
+++ b/tipkor/wide/templates/wide/banner.html
@@ -90,7 +90,7 @@
                             <div class="col">{{ calc_form.post_obr }}<p>Обработка и люверсы</p>
                             </div>
                             <button type="submit" class="calc_button btn btn-primary" name="calc_form">Расчет</button>
-                            <h6>Нажмите "Расчет", что бы сформировать заказ</h6>
+                            <h6>Нажмите "Расчет", чтобы сформировать заказ</h6>
                         </div>
                     </div>
                 </form>
@@ -132,7 +132,8 @@
             </div>
             {% else %}
 
-            <h2 style="color: rgb(145, 1, 30);">Выбирете параметры и нажмите "Расчет".</h2>
+            <h2 style="color: rgb(145, 1, 30);">Выбирайте параметры и нажимайте кнопку "Расчет".</h2>
+
 
             {% endif %}
         </div>
