--- a/tipkor/wide/templates/wide/sticker.html
+++ b/tipkor/wide/templates/wide/sticker.html
@@ -87,7 +87,7 @@
                                 </p>
                             </div>
                             <button type="submit" class="calc_button btn btn-primary" name="calc_form">Расчет</button>
-                            <h6>Нажмите "Расчет", что бы сформировать заказ</h6>
+                            <h6>Нажмите "Расчет", чтобы сформировать заказ</h6>
                         </div>
                     </div>
                 </form>
@@ -129,7 +129,8 @@
             </div>
             {% else %}
 
-            <h2 style="color: rgb(145, 1, 30);">Выбирете параметры и нажмите "Расчет".</h2>
+            <h2 style="color: rgb(145, 1, 30);">Выбирайте параметры и нажимайте кнопку "Расчет".</h2>
+
 
             {% endif %}
         </div>
