add title to politica

--- a/tipkor/tipkor/templates/tipkor/politica.html
+++ b/tipkor/tipkor/templates/tipkor/politica.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title_meta %}
+<title>Tipkor.ru - Полиграфия, широкоформатная печать, печати и штампы. Online заказ рекламы. Политика в отношении обработки персональных данных</title>
+<meta name="description" content="Политика в отношении обработки персональных данных"/>
+<meta name="keywords" content="политика в отношении обработки персональных данных">
+{% endblock %}
 
 {% block content %}
 
