--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -147,6 +147,10 @@
 			</div>
 
 			<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+				<li class="ms-3">
+					<iframe src="https://yandex.ru/sprav/widget/rating-badge/166401945767?type=rating&theme=dark"
+						width="150" height="50" frameborder="0"></iframe>
+				</li>
 
 				<li class="ms-3">
 					<a href="https://wa.me/79645716551?text=" target="_blank">
