--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -39,6 +39,7 @@
 </head>
 
 <body>
+
 	<!-- Верхняя строка -->
 	<div class="container pt-4">
 		<div class="top_line row bg-light shadow border d-flex justify-content-center align-items-center rounded p-3">
@@ -80,12 +81,20 @@
 						<a href="https://t.me/+79645716551" target="_blank"
 							style="font-weight: 800; font-size: large; padding-left: 2px">Telegram</a>
 					</a>
-
-
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<!-- Строка важного объявления -->
+	<div class="container pt-2">
+		<div class="row bg-danger shadow border d-flex justify-content-center align-items-center rounded">
+			<h2 class="d-flex text-center justify-content-center text-light">С 28 декабря 2023 по 9 января 2024 - нерабочие дни.
+			</h2>
+		</div>
+	</div>
+
+
 
 	<!-- Навигация -->
 	<div class="container my-4 py-2 bg-light shadow border rounded">
