--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -88,9 +88,9 @@
 
 	<!-- Строка важного объявления -->
 	<div class="container pt-2">
-		<div class="row bg-danger shadow border d-flex justify-content-center align-items-center rounded">
-			<h2 class="d-flex text-center justify-content-center text-light">С 28 декабря 2023 по 9 января 2024 - нерабочие дни.
-			</h2>
+		<div class="row bg-danger shadow d-flex justify-content-center rounded py-1">
+			<h4 class="d-flex text-center justify-content-center text-light">С 28 декабря 2023 по 9 января 2024 - нерабочие дни.
+			</h4>
 		</div>
 	</div>
 
