--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -87,12 +87,12 @@
 	</div>
 
 	<!-- Строка важного объявления -->
-	<div class="container pt-2">
+	<!-- <div class="container pt-2">
 		<div class="row bg-danger shadow d-flex justify-content-center rounded py-1">
 			<h4 class="d-flex text-center justify-content-center text-light">С 28 декабря 2023 по 9 января 2024 - нерабочие дни.
 			</h4>
 		</div>
-	</div>
+	</div> -->
 
 
 
