--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -52,7 +52,8 @@
 			<div class="col hi_telefon">
 				<div>
 					<a class="fs-3 mb-0 link-dark" href="tel:+79645716551"><strong>+7 (964) 571-65-51</strong></a>
-					<a class="fs-4 mb-0 link-dark" href="mailto:tipkor@mail.ru" target="_blank" style="font-size: 10px;">tipkor@mail.ru</a>
+					<a class="fs-4 mb-0 link-dark" href="mailto:tipkor@mail.ru" target="_blank"
+						style="font-size: 10px;">tipkor@mail.ru</a>
 					<!-- <p class="fs-3 mb-0"><strong>8 (964) 571-65-51</strong></p> -->
 				</div>
 			</div>
@@ -68,12 +69,6 @@
 						<img id="hi_map" src="{% static '/tipkor/img/map.svg' %}" alt="" style="padding-left: 5px">
 						<a href="/#map"
 							style="font-weight: 800; font-size: large; padding-left: 2px; padding-right: 15px">Карта</a>
-					</a>
-
-					<a href="mailto:tipkor@mail.ru" target="_blank">
-						<img id="hi_mess" src="{% static '/tipkor/img/email.svg' %}" alt="" style="padding-left: 5px">
-						<a href="mailto:tipkor@mail.ru" target="_blank"
-							style="font-weight: 800; font-size: large; padding-left: 2px">Почта</a>
 					</a>
 
 					<a href="https://wa.me/79645716551?text=" target="_blank">
