--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -182,8 +182,7 @@
 
 <div id='map' class="container bg-light shadow border rounded mt-4 p-3">
 
-    <script type="text/javascript" charset="utf-8" async
-        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A02334a9e6f8d40bac72514daa31888f4dae190ef0d36ae4edf855fd230598474&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3d6f213940876ec788e0c0a0d8c2187f4caeba04d0e5f8dc674f5b37d73c9b8e&amp;width=100%25&amp;height=600&amp;lang=ru_RU&amp;scroll=true"></script>
 
 </div>
 </div>
