--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -87,15 +87,14 @@
 			</div>
 		</div>
 	</div>
-
+	
 	<!-- Строка важного объявления -->
-	<!-- <div class="container pt-2">
+	<div class="container pt-2">
 		<div class="row bg-danger shadow d-flex justify-content-center rounded py-1">
-			<h4 class="d-flex text-center justify-content-center text-light">С 28 декабря 2023 по 9 января 2024 - нерабочие дни.
+			<h4 class="d-flex text-center justify-content-center text-light">С 28 июля 2025 по 1 августа 2025 - нерабочая, профилактическая неделя. Заказы принимаются, но в работу пойдут с 4 августа.
 			</h4>
 		</div>
-	</div> -->
-
+	</div>
 
 
 	<!-- Навигация -->
